@@ -1,1 +1,1 @@
-DIST find_cruft-3.0.tar.gz 9983 SHA256 af10b309ffbe2f136a101d4096e1b2687ba10a68d92ef2cf472a71b397e22372 SHA512 c966114e4b5d1d4ee35031cb8a9ab456981cd75df66ae73153c6e170ad3641a774c031e389cf3cad0c99ef6cd5d3a86fd7f1c2e77be2ca68258df190f43dfbf9 WHIRLPOOL 146dfd82625f8587a346c5efda2161c46a14037cfa8d076d3c0282a2d9cc12d50b73cd1fe14aef668e4ff7a7f2bb4d5c7d98faf9dd023a79531ed569cb5f5073
+DIST find_cruft-v3.0.1.tar.gz 10078 SHA256 ba998fce810b1dbe1797490c90f8adea6c32c246c3b6b71afd2984729edc6935 SHA512 7ff96eba4633df0990ff2023953ad439c12f5af3df9ff0bf9b75633b6904fdfdc3d13ddbe3008714d9392208625fb73c0eebde71499ddaa0396fa27493bc27c0 WHIRLPOOL b1e023ec38738efd901d717edc973bdd42c68c501e689b72b5f8f6f1ca54baa63ce4f387afba933fee8c2225d87d0ed13691dd20dc652c6867c6f7f0d8770094
