@@ -1,1 +1,1 @@
-DIST mv_perl-v2.36.tar.gz 65920 SHA256 68b37789e40380db24a9c3ae0503648463b5b1248dd0fa6c6975dc7c98d1a1b4 SHA512 81411fef6f1a8decb963b900317e816a58718e6576cdede7777ad56414b07bcea5423206f2eed348ab6e1241a5dd04b7b9415b0183f2c6c2f71b2fbf4f4ffeef WHIRLPOOL 48b6b2483cca23a7bcb73b565ade19f7e9f1ea4a33bbb9d47436dc15957acb8e7eabcd3eabc7d283006126855958349033d0d553035648104afd4882fdb9b71f
+DIST mv_perl-v2.37.tar.gz 65971 SHA256 cc28b3f81383734d1906a2e4ed2ad6344a24a8c1cc9640d19d019b131f43c4c0 SHA512 73ca52ea99b85d0341d2767ea3370dc28591b2ba27d96ebb2100dcb742c0cd5b73f4c26238ad8cf6cf0f7a5961f8664aae54675786762953d59db7378e4ae802 WHIRLPOOL 1acacbb7172848668e871c6840a4461dbc1f250d0a99abbe37334818c50f440105c347e0a6124f31413c2350111ba479d9b293b5201a9744bf7fe35561f2f03c
