@@ -1,1 +1,1 @@
-DIST noscript-2.6.8.40.xpi 541661 SHA256 1ec05034d23314119155e0b08a69d601d14c56e95280ea161316969b39b1f481 SHA512 f6608476ef7a15804a9704c4affaffc56bef5d8d82ef38ddafc5424cca13e445d2ec985859bc5373a5f0ff1a4655bd5676e8368e2575d9dad6b366fb16284fe5 WHIRLPOOL 53e98819a38b1a96e46c19025ea7ba4f028ad9fe0bc592ea07d9182facd895304248434d142240fd0e16c410b816754046537869acddca73bb92c4be68b733c5
+DIST noscript-2.6.8.41.xpi 540395 SHA256 ac8b2febff44a437e00bd261570af9f7aba8cc2f49e69ffb631a0578af6facc1 SHA512 8fa73f9783e157b699cef1382ad73b5c710aa9f7a2b1553516c4f66c881729673ebfbdf1b328688757c440e2a6d1e0407a4226808557e157296649f031097a9a WHIRLPOOL d0866c87181774ccee2ad255122476b530600ac3538ee166a9a60cce106f0b5103a11a32ff8fba7570a3550a10be3fd54a853e0b0c45594f07eb13e201cf8d02
