@@ -2,7 +2,7 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*mv_perl-2.36 (13 Sep 2014)
+*mv_perl-2.37 (13 Sep 2014)
 
   13 Sep 2014; Martin Väth <martin@mvath.de>:
   Version bump, remove old ebuild. More precise perl deps
