@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*noscript-2.6.8.41 (13 Sep 2014)
+
+  13 Sep 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *noscript-2.6.8.40 (07 Sep 2014)
 
   07 Sep 2014; Martin Väth <martin@mvath.de>:
