@@ -2,10 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
-*find_cruft-3.0 (29 Aug 2014)
+*find_cruft-3.0.1 (13 Sep 2014)
 
   13 Sep 2014; Martin Väth <martin@mvath.de>:
-  More precise perl deps
+  Version bump, remove old ebuild. More precise perl deps
+
+*find_cruft-3.0 (29 Aug 2014)
 
   29 Aug 2014; Martin Väth <martin@mvath.de>:
   Version bump, remove old ebuild
